# alignd_assessment

./: README.md
dbt_project/: dbt_project.yml
dbt_project/models/: dim_patients.sql  fct_patient_claims_summary.sql  schema.yml
ddl/: indexes.sql  star_schema.sql
docker/: dockerfile  pyproject.toml
etl_lambda/: README.md  lambda_function.py
scripts/: analytical_view.sql  clean_health_products.py  setup_task1.sh  transformation.sql
